@@ -1,3 +1,4 @@
+* Allow multiple eligibility rules per option
 * Add Eligibility Rule errors management
 
 Version 1.6 - 2015-12-23
